// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic-type-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`basic-type-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`code-splitting-import-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`code-splitting-import-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`code-splitting-import-ts-dependency-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
    "xfile
(3,22): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`code-splitting-import-ts-dependency-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`commonjs-usage-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`css-modules-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(3,20): error TS2339",
  ],
  "warnings": Array [],
}
`;

exports[`css-modules-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ignore-basic-type-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(4,11): error TS2304",
  ],
  "warnings": Array [],
}
`;

exports[`ignore-child-compiler-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`ignore-tslint-rule-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
  4:10  warning  Type declaration of 'any' loses type-safety. Consider replacing it with a more precise type, the empty type ('{}'), or suppress this occurrence.  no-any
",
  ],
}
`;

exports[`skip-type-check-on-build-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(3,1): error TS1005",
  ],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(3,22): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`ts-dependency-only-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`tsconfig-invalid-option-0 1`] = `
Object {
  "errors": Array [
    "xfile
error TS5023: Unknown compiler option 'xxxx'.",
    "xfile
Module build failed: error while parsing tsconfig.json",
  ],
  "warnings": Array [],
}
`;

exports[`tslint-emit-warning-as-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
  2:11  warning  ' should be \\"  quotemark
",
  ],
  "warnings": Array [],
}
`;

exports[`tslint-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
  2:11  error  ' should be \\"  quotemark
",
  ],
  "warnings": Array [],
}
`;

exports[`tslint-warning-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
  2:11  warning  ' should be \\"  quotemark
",
  ],
}
`;

exports[`use-library-type-definition-error-0 1`] = `
Object {
  "errors": Array [
    "xfile
(1,32): error TS7016",
  ],
  "warnings": Array [],
}
`;

exports[`use-library-type-definition-no-error-0 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
